--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
           <button class="next">&#10095;</button>
         </div>
         <div class="descripcion">
-          <h3>Piso moderno (prueba no oficial)</h3>
-          <p>Ubicado en el corazón de Melilla, este piso cuenta con acabados de alta calidad, orientación luminosa y espectaculares vistas al mar.</p>
-          <button onclick="window.open('https://www.facebook.com/fincamelilla', '_blank')">
-            Pedir información
+          <h3>Piso moderno (alquiler)</h3>
+          <p>600 euros al mes 1 dormitorio frente a la espiguera</p>
+          <button onclick="window.open('https://www.facebook.com/share/p/189JjhhuBc/', '_blank')">
+            Más información
           </button>
         </div>
       </div>
@@ -239,10 +239,10 @@
           <button class="next">&#10095;</button>
         </div>
         <div class="descripcion">
-          <h3>Piso familiar con parque cercano (prueba no oficial)</h3>
-          <p>Ideal para familias, este amplio inmueble dispone de varias habitaciones, zonas verdes alrededor y proximidad a colegios y supermercados.</p>
+          <h3>Piso familiar (venta 535.000€)</h3>
+          <p>Recibidor, Salon, 2 Habitaciones y Baño completo</p>
           <button onclick="window.open('https://www.facebook.com/fincamelilla', '_blank')">
-            Pedir información
+            Más información
         </button>
         </div>
       </div>
