--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
       <!-- Propiedad 1 -->
       <div class="propiedad">
         <div class="carousel">
-          <img src="casa1a.jpg" alt="Piso moderno con vistas - Imagen 1" class="active">
-          <img src="casa1b.jpg" alt="Piso moderno con vistas - Imagen 2">
-          <img src="casa1c.jpg" alt="Piso moderno con vistas - Imagen 3">
+          <img src="casaa.jpg" alt="Piso moderno con vistas - Imagen 1" class="active">
+          <img src="casab.jpg" alt="Piso moderno con vistas - Imagen 2">
+          <img src="casac.jpg" alt="Piso moderno con vistas - Imagen 3">
           <button class="prev">&#10094;</button>
           <button class="next">&#10095;</button>
         </div>
@@ -232,9 +232,9 @@
       <!-- Propiedad 2 -->
       <div class="propiedad">
         <div class="carousel">
-          <img src="casa2a.jpg" alt="Piso familiar amplio - Imagen 1" class="active">
-          <img src="casa2b.jpg" alt="Piso familiar amplio - Imagen 2">
-          <img src="casa2c.jpg" alt="Piso familiar amplio - Imagen 3">
+          <img src="casad.jpg" alt="Piso familiar amplio - Imagen 1" class="active">
+          <img src="casae.jpg" alt="Piso familiar amplio - Imagen 2">
+          <img src="casaf.jpg" alt="Piso familiar amplio - Imagen 3">
           <button class="prev">&#10094;</button>
           <button class="next">&#10095;</button>
         </div>
